# gpio-wire

./: CHANGELOG.md  README.md
.github/workflows/: build.yml
documents/: PIC project, using cheap RF modules.desktop
sources/receiver/arduino/: .gitignore  CRC.cpp  CRC.hpp  Configuration.hpp  GPIOWire.cpp  GPIOWire.hpp  Logger.cpp  Logger.hpp  Main.cpp  Main.hpp
sources/transmitter/module/: .gitignore  Makefile  Makefile.chip  gpiowire.c  gpiowire.h
sources/transmitter/scripts/: chip-build-lkm  chip-install-sources
sources/transmitter/tester/: .gitignore  CMakeLists.txt  Main.cpp  clean  configure
